assets/default.css
/* Bygone CSS Look-and-feel - (c) Sarah 2019 */
* {
	font-family: sans-serif;
	background-color: transparent; /* this is so we don't get big blue blocks around things */
	margin: 6px;
	font-family: sans-serif;
}

html {
	background-image: linear-gradient(#7ea0bf, #6586a5);
	height: 100%;
	width: 100%;
	margin: 0px;
	padding: 0px;
}

hr {
	padding: 4px;
	border-radius: 8px;
	border: 1px inset #7ea0bf;
	background-image: linear-gradient(#6586a5, #7ea0bf);
}

button, a {
	color: black;
	padding: 4px;
	border-radius: 8px;
	border: 1px outset #7ea0bf;
	font-size: 10pt;
	background-image: linear-gradient(#7ea0bf, #6586a5);
	text-decoration: none;
	cursor: default;
}
	button:hover, a:hover {
		border: 1px outset #84a9c9;
		background-color: #84a9c9;
		background-image: linear-gradient(#84a9c9, #6e8fad);
	}

	button:active, a:active {
		border: 1px inset #708faa;
		background-color: #708faa;
		transform: translate(.5px,.5px);
		background-image: linear-gradient(#6586a5, #7ea0bf);
	}

input[type="text"] {
	padding: 4px;
	border-radius: 8px;
	border: 1px inset #7ea0bf;
	background-image: linear-gradient(#708faa, #7ea0bf);
}

canvas {
	padding: 4px;
	background-color: #7ea0bf;
	border-radius: 8px;
	border: 1px inset #7ea0bf;
}

label {
	font-size: 11pt;
}

h1 {
	padding-bottom: 4px;
}

